# UR5_Coppeliasim_for_ROS

./: Cam.py  Cam_2.py  README.md  dummy0.py  readme_new.md  ur5.py
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: ur5_ros_bridge.pc
devel/share/ur5_ros_bridge/cmake/: ur5_ros_bridgeConfig.cmake
src/: CMakeLists.txt
src/ur5_ros_bridge/: CMakeLists.txt
src/ur5_ros_bridge/launch/: ur5_ros_bridge.launch
src/ur5_ros_bridge/scripts/: ur5_coppelia_bridge.py  ur5_sequence_controller.py
